about page fixes- video now scrolls with text- small breakpoint uses cetner alignment

--- a/src/pages/AboutPage/aboutPage.css
+++ b/src/pages/AboutPage/aboutPage.css
@@ -14,6 +14,7 @@
 
 .videoContainer video {
     position: fixed;
+    margin-top: -3rem;
     width: 20rem;
     height: 100%;
     border-top-right-radius: 3rem;
@@ -75,30 +76,36 @@ h4 {
     }
 }
 
-@media only screen and (max-width: 671px) {
-    .videoTextContainer {
+@media only screen and (max-width: 755px) {
+    /* .videoTextContainer {
         background-color: black;
         flex-direction: column;
         height: 100vh;
-    }
+    } */
 
     .videoContainer video {
-        width: 100%;
+        position:initial;
         height: 50%;
-        border-top-right-radius: 0rem;
+        border-top-right-radius: 2rem;
+        border-bottom-left-radius: 2rem;
     }
     .videoContainer {
-        height: 50%;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-top: 7rem;
+        margin-bottom: 2rem;
     }
 
     .textContent {
         position: relative;
         margin-top: 0rem;
         padding-left: 1rem;
+        padding-right: 0rem;
         padding-bottom: 1rem;
         background-color: black;
         color: rgb(200, 200, 200);
-        text-align: unset;
+        text-align: center;
         font-size: 1.25rem;
         line-height: 2.5rem;
         height: 50%;
