--- a/src/pages/FeaturePage/styles/Location.module.scss
+++ b/src/pages/FeaturePage/styles/Location.module.scss
@@ -1,8 +1,11 @@
 .container {
-  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  margin-top: 1rem;
   width: 100%;
   padding-top: 1rem;
-  color: white;
+  color: white;;
   // border: 1px solid red;
   @media (min-width: 881px) {
     padding-top: 0rem;
@@ -21,7 +24,7 @@
 }
 
 .mapContainer {
-  justify-content: left;
+  justify-content: center;
   min-height: 20em;
   max-width: 20em;
   border-top-left-radius: 2rem;
@@ -36,6 +39,7 @@
     padding: 0em;
   }
 }
+
 
 .map {
   // position: absolute;
@@ -115,4 +119,21 @@
   margin-top: 1rem;
   text-transform: uppercase;
   line-height: 1.5rem;
+}
+
+@media (max-width: 755px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .address {
+    display:block;
+  }
+
+  .phoneNumber {
+    a {
+      display: block;
+    }
+  }
 }
